# utils

./: .gitignore  CMakeLists.txt
src/: .main.cpp.swp  .scoped_signal.hpp.swp  constexpr_array.hpp  is_in.hpp  job_dispatch.hpp  main.cpp  nlz.hpp  scoped_signal.hpp  string_templating.hpp  type_print.hpp  utils.hpp  variadic-tuple.hpp
